--- a/src/style/style.css
+++ b/src/style/style.css
@@ -29,3 +29,46 @@ body {
 .header {
   grid-column: 1/3;
 }
+
+.sidebar h2 {
+  text-align: center;
+  font-size: 2.5rem;
+}
+
+.projects {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding: 10px 0px;
+}
+
+.project {
+  text-decoration: none;
+  border: none;
+  font: inherit;
+  background-color: white;
+  padding: 10px;
+  font-size: 2rem;
+  height: 50px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.project img {
+  visibility: hidden;
+  height: 2rem;
+}
+
+.project:hover {
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 50px;
+}
+
+.project:hover img {
+  visibility: visible;
+}
+
+.project img:hover {
+  filter: invert(13%) sepia(100%) saturate(7485%) hue-rotate(2deg)
+    brightness(107%) contrast(111%);
+}
