--- a/src/style/style.css
+++ b/src/style/style.css
@@ -30,6 +30,11 @@ body {
   grid-column: 1/3;
 }
 
+.sidebar {
+  display: flex;
+  flex-direction: column;
+}
+
 .sidebar h2 {
   text-align: center;
   font-size: 2.5rem;
@@ -138,6 +143,6 @@ body {
     brightness(107%) contrast(111%);
 }
 
-.project-add-form {
+.project-modal-form {
   flex: 1;
 }
