--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -6,6 +8,7 @@
 
 html,
 body {
+  font-family: "IBM Plex Mono", monospace;
   min-height: 100vh;
 }
 
@@ -28,6 +31,13 @@ body {
 
 .header {
   grid-column: 1/3;
+}
+
+.header {
+  font-size: 2.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .sidebar {
@@ -156,18 +166,52 @@ body {
 
 .todos {
   padding: 0px 10px;
-  height: 100%;
   display: grid;
   gap: 10px;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(auto-fill, minmax(50px, 1fr));
 }
 
 .todo-div {
   display: flex;
+  background-color: grey;
+  color: white;
+  height: 75px;
   padding: 0px 10px;
-  flex-direction: column;
-  justify-content: center;
+  gap: 10px;
+  align-items: center;
   border: 1px solid black;
   font-size: 2rem;
+  border-radius: 10px;
+}
+
+.todo-div img {
+  height: 60%;
+}
+
+.todo-div img:last-child {
+  margin-left: auto;
+}
+.todo-div img:last-child:hover {
+  filter: invert(16%) sepia(96%) saturate(6905%) hue-rotate(360deg)
+    brightness(90%) contrast(126%);
+}
+
+.todo-div[data-danger="1"] .danger {
+  filter: invert(57%) sepia(37%) saturate(5700%) hue-rotate(86deg)
+    brightness(124%) contrast(117%);
+}
+
+.todo-div[data-danger="2"] .danger {
+  filter: invert(94%) sepia(74%) saturate(7499%) hue-rotate(358deg)
+    brightness(108%) contrast(102%);
+}
+
+.todo-div[data-danger="3"] .danger {
+  filter: invert(73%) sepia(86%) saturate(3641%) hue-rotate(0deg)
+    brightness(103%) contrast(103%);
+}
+
+.todo-div[data-danger="4"] .danger {
+  filter: invert(16%) sepia(96%) saturate(6905%) hue-rotate(360deg)
+    brightness(90%) contrast(126%);
 }
