--- a/src/style/style.css
+++ b/src/style/style.css
@@ -111,7 +111,7 @@ body {
   background-color: rgba(0, 0, 0, 0.5);
 }
 
-.project-modal {
+.modal {
   background-color: white;
   position: fixed;
   display: flex;
@@ -125,31 +125,31 @@ body {
   z-index: 2;
 }
 
-.project-modal-header {
+.modal-header {
   display: flex;
   align-items: center;
   padding: 5px;
 }
 
-.project-modal-header h2 {
+.modal-header h2 {
   font-size: 2rem;
   flex: 1;
   text-align: center;
 }
 
-.project-modal-header button {
+.modal-header button {
   border: none;
   background-color: white;
   width: 30px;
   height: 30px;
 }
 
-.project-modal-header button:hover img {
+.modal-header button:hover img {
   filter: invert(13%) sepia(100%) saturate(7485%) hue-rotate(2deg)
     brightness(107%) contrast(111%);
 }
 
-.project-modal-form {
+.projecy-modal-form {
   flex: 1;
 }
 
@@ -247,4 +247,19 @@ body {
 .todo-delete:hover {
   filter: invert(16%) sepia(96%) saturate(6905%) hue-rotate(360deg)
     brightness(90%) contrast(126%);
+}
+
+.add-todo-btn {
+  height: 75px;
+  border: none;
+  border: 1px solid black;
+  border-radius: 10px;
+}
+
+.add-todo-btn:hover {
+  background-color: rgb(230, 230, 230);
+}
+
+.add-todo-btn img {
+  height: 100%;
 }
