--- a/src/style/style.css
+++ b/src/style/style.css
@@ -123,7 +123,7 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 2;
+  z-index: 1;
 }
 
 .modal-header {
@@ -190,7 +190,7 @@ body {
   font-size: 1.5rem;
 }
 
-.todo-div[data-status="true"] p {
+.todo-div[data-status="true"] .todo-name {
   text-decoration: line-through;
 }
 
@@ -269,4 +269,8 @@ body {
 
 .add-todo-btn img {
   height: 100%;
+}
+
+#todo-description {
+  resize: none;
 }
