--- a/src/style/style.css
+++ b/src/style/style.css
@@ -88,7 +88,12 @@ body {
   visibility: visible;
 }
 
-.project img:hover {
+.project img:first-of-type:hover {
+  filter: invert(8%) sepia(100%) saturate(7483%) hue-rotate(247deg)
+    brightness(92%) contrast(144%);
+}
+
+.project img:last-of-type:hover {
   filter: invert(13%) sepia(100%) saturate(7485%) hue-rotate(2deg)
     brightness(107%) contrast(111%);
 }
