--- a/src/style/style.css
+++ b/src/style/style.css
@@ -155,11 +155,40 @@ body {
     brightness(107%) contrast(111%);
 }
 
-.projecy-modal-form {
+.project-modal-form {
   flex: 1;
 }
 
-.main {
+.todo-modal-form {
+  margin-top: 20px;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 15px;
+}
+
+.form-input {
+  display: flex;
+  flex-direction: column;
+  width: 40%;
+}
+
+.form-input :last-child {
+  border: 1px solid black;
+  font-size: 1.3rem;
+}
+
+.form-input :is(input, select, textarea) {
+  width: 100%;
+}
+
+.todo-modal-form input[type="submit"] {
+  width: 20%;
+  font-size: 1.3rem;
+}
+
+div[class] .main {
   display: flex;
   flex-direction: column;
   gap: 50px;
@@ -247,7 +276,7 @@ body {
 }
 
 .todo-info {
-  font-size: 1.3rem;
+  font-size: 1.9rem;
   padding: 20px;
 }
 
