--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,5 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap");
 
+:root {
+  --color-one: #08d9d6;
+  --color-two: #252a34;
+  --color-three: #ff2e63;
+  --color-four: #eaeaea;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -17,44 +24,45 @@ body {
 }
 
 .content {
+  background-color: var(--color-one);
+  padding: 10px;
   display: grid;
   height: 100%;
+  gap: 10px;
   grid-template-rows: 1fr 9fr;
   grid-template-columns: 300px 1fr;
 }
 
-.header,
-.main,
-.sidebar {
-  border: 1px solid black;
-}
-
 .header {
+  background-color: var(--color-two);
   grid-column: 1/3;
-}
-
-.header {
   font-size: 2.5rem;
+  color: var(--color-four);
   display: flex;
   justify-content: center;
   align-items: center;
+  border-radius: 10px;
 }
 
 .sidebar {
   display: flex;
   flex-direction: column;
+  background-color: var(--color-two);
+  padding-top: 20px;
+  border-radius: 10px;
 }
 
 .sidebar h2 {
   text-align: center;
   font-size: 2.5rem;
+  color: var(--color-four);
 }
 
 .projects {
   display: flex;
   flex-direction: column;
   gap: 10px;
-  padding: 10px 0px;
+  padding: 10px 10px;
 }
 
 .project {
@@ -64,6 +72,7 @@ body {
   height: 50px;
   display: flex;
   align-items: center;
+  border-radius: 10px;
 }
 
 .project p {
@@ -73,6 +82,7 @@ body {
   text-align: start;
   flex: 1;
   overflow: hidden;
+  color: var(--color-three);
 }
 
 .project img {
@@ -101,6 +111,12 @@ body {
 .add-project-btn {
   width: 95%;
   align-self: center;
+  border: none;
+  border-radius: 10px;
+}
+
+.add-project-btn:hover {
+  background-color: rgb(230, 230, 230);
 }
 
 .add-project-btn img {
@@ -161,6 +177,8 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-family: inherit;
+  margin-top: 5px;
 }
 
 .project-modal-form :is(label, input) {
@@ -173,7 +191,7 @@ body {
 }
 
 .todo-modal-form {
-  margin-top: 20px;
+  margin-top: 5px;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -184,7 +202,12 @@ body {
 .form-input {
   display: flex;
   flex-direction: column;
+  gap: 3px;
   width: 40%;
+}
+
+.form-input label {
+  font-size: 1.2rem;
 }
 
 .form-input :last-child {
@@ -194,20 +217,37 @@ body {
 
 .form-input :is(input, select, textarea) {
   width: 100%;
+  padding: 5px;
+  font-family: inherit;
+  border-radius: 10px;
 }
 
-.todo-modal-form input[type="submit"] {
+.todo-modal-form input[type="submit"],
+.project-modal-form input[type="submit"] {
   width: 20%;
-  font-size: 1.3rem;
+  border: none;
+  border-radius: 10px;
+  font-family: inherit;
+  font-size: 1.5rem;
+  border: 1px solid black;
 }
 
-div[class] .main {
+.todo-modal-form input[type="submit"]:hover,
+.project-modal-form input[type="submit"]:hover {
+  background-color: rgb(230, 230, 230);
+}
+
+.main {
+  border-radius: 10px;
   display: flex;
   flex-direction: column;
-  gap: 50px;
+  padding-top: 20px;
+  gap: 25px;
+  background-color: var(--color-two);
 }
 
 .main h1 {
+  color: var(--color-four);
   font-size: 3rem;
   text-align: center;
 }
@@ -221,8 +261,8 @@ div[class] .main {
 
 .todo-div {
   display: flex;
-  background-color: grey;
-  color: white;
+  background-color: var(--color-four);
+  color: var(--color-three);
   height: 75px;
   padding: 0px 10px;
   gap: 10px;
@@ -254,8 +294,8 @@ div[class] .main {
 }
 
 .todo-check:hover {
-  filter: invert(57%) sepia(37%) saturate(5700%) hue-rotate(86deg)
-    brightness(124%) contrast(117%);
+  filter: invert(24%) sepia(89%) saturate(4654%) hue-rotate(132deg)
+    brightness(96%) contrast(98%);
 }
 
 .todo-div[data-status="true"] .todo-check:hover {
@@ -264,13 +304,13 @@ div[class] .main {
 }
 
 .todo-div[data-danger="1"] .todo-danger {
-  filter: invert(57%) sepia(37%) saturate(5700%) hue-rotate(86deg)
-    brightness(124%) contrast(117%);
+  filter: invert(86%) sepia(24%) saturate(7215%) hue-rotate(124deg)
+    brightness(93%) contrast(94%);
 }
 
 .todo-div[data-danger="2"] .todo-danger {
-  filter: invert(94%) sepia(74%) saturate(7499%) hue-rotate(358deg)
-    brightness(108%) contrast(102%);
+  filter: invert(24%) sepia(89%) saturate(4654%) hue-rotate(132deg)
+    brightness(96%) contrast(98%);
 }
 
 .todo-div[data-danger="3"] .todo-danger {
@@ -284,13 +324,14 @@ div[class] .main {
 }
 
 .todo-expand:hover {
-  filter: invert(99%) sepia(3%) saturate(202%) hue-rotate(218deg)
-    brightness(119%) contrast(100%);
+  filter: invert(86%) sepia(0%) saturate(96%) hue-rotate(241deg) brightness(93%)
+    contrast(90%);
 }
 
 .todo-info {
   font-size: 1.9rem;
   padding: 20px;
+  padding-top: 5px;
 }
 
 .todo-edit:hover {
@@ -320,4 +361,11 @@ div[class] .main {
 
 #todo-description {
   resize: none;
+}
+
+input#project-name {
+  font-family: inherit;
+  border: 1px solid black;
+  border-radius: 10px;
+  padding: 5px;
 }
